[KARAF-4709]use new JVM options with recent java9 kit